2003-11-19  Per Bothner  <per@bothner.com>

	* kawa.texi (KRL):  Note unescaped-data.

2003-11-05  Per Bothner  <per@bothner.com>

	* Makefile.am (../kawa-doc-$(VERSION).tar.gz):  Add kawa.pdf.

	* kawa.texi (Module classes):  Deocument define-variable.
	(Compilation options):  Mention define-variable.

2003-10-31  Per Bothner  <per@bothner.com>

	* kawa.texi (Procedures): Warn about limitations of generic methods.

	* kawa.texi (Mailing lists}  Note Qexo-general list.
	Add Bugzilla links.  Miscellaneous re-organization.

2003-10-21  Per Bothner  <per@bothner.com>

	* kawa.texi (Compilation options):  New node.

	* kawa.texi (Uniform vectors):  New subsection: Relationship with
	Java arrays.

2003-09-05  Per Bothner  <per@bothner.com>

	* Makefile.am (version.texi):  Add dependency so make info works even
	if using CVS version without maintainer mode.

2003-08-20  Per Bothner  <per@bothner.com>

	* kawa.texi (Quantities):  Document extended definition of
	quotient, remainder, and modulo.

	* kawa.texi (Standard Types):  Note that <rational> and <integer>
	are exact.

2003-08-03  Per Bothner  <per@bothner.com>

	* kawa.texi (Standard Types):  Add note about #f and #t representation.

2003-07-15  Chris Dean  <Chris.Dean@mercedsystems.com>

	* kawa.texi (Method operations):  Document new invoke-special function.

2003-06-11  Per Bothner  <per@bothner.com>

	* kawa.texi (Scheme types in Java): Update ancient class names.

2003-06-03  Per Bothner  <per@bothner.com>

	* kawa.texi:  Update URL for Ant.

2003-06-01  Per Bothner  <per@bothner.com>

	* kawa.texi:  Update build instructions.  Mention select-java1.

2003-05-31  Per Bothner  <per@bothner.com>

	* kawa.texi (Index): Name renamed to 'Overall Index', to avoid
	a name clash with 'index.html' on case-insensitive filesystems.

	* kawa.texi (Options):  Note that -f can take a URL.
	(Eval and Environments):  Document base-uri, load and load-relative.
	
2003-05-17  Chris Dean  <Chris.Dean@sokitomi.com>
