@@ -50,6 +50,12 @@ XSLT = xsltproc
 internals.html: $(srcdir)/internals.xml
 	$(XSLT) /opt/docbook-xsl/html/docbook.xsl $< > $@
 
+internals/index.html: $(srcdir)/internals.xml
+	$(XSLT) --stringparam base.dir internals/ \
+	  --stringparam generate.section.toc.level 1 \
+	  --stringparam use.id.as.filename 1 \
+	  /opt/docbook-xsl/html/docbook.xsl $<
+
 TransformToLatex.class:
 	ln -s /home/bothner/public_html/papers/Freenix00/TransformToLatex.class .
 usenix.sty:
